# nothing-private-browser

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  check_resources.sh  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-release.yml
assets/: home.html  resources.qrc
src/: FingerprintSpoofer.cpp  FingerprintSpoofer.h  IdentityGenerator.cpp  IdentityGenerator.h  Interceptor.cpp  Interceptor.h  PrivateWindow.cpp  PrivateWindow.h  UpdateChecker.cpp  UpdateChecker.h  main.cpp
